--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
-*.aux *.log *.out *.toc *.synctex.gz *.snm *.bcf *.run.xml *.nav
+*.aux
+*.log
+*.out
+*.toc
+*.synctex.gz
+*.snm
+*.bcf
+*.run.xml
+*.nav
